# Agent-evaluator

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
app/: main.py
app/application/: chat_service.py
app/config/: settings.py
app/domain/: exceptions.py  models.py  ports.py
app/infrastructure/guardrails/: composite_guardrail.py  llm_guardrail.py  regex_guardrail.py
app/infrastructure/llm/: groq_agent.py  groq_judge.py  prompts.py
app/infrastructure/memory/: in_memory.py  langgraph_history.py
app/infrastructure/observability/: mlflow_tracer.py
app/presentation/: cli.py
tests/: __init__.py  test_chat_service.py  test_domain.py  test_guardrails.py  test_in_memory.py  test_settings.py
